Fix folders not being left aligned when there are not enough items in the grid

--- a/frontend/src/app/shared/components/explore/file-viewer/file-viewer.component.scss
+++ b/frontend/src/app/shared/components/explore/file-viewer/file-viewer.component.scss
@@ -1,12 +1,12 @@
 .file-container {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
   @screen md {
-    grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
   }
   @screen sm {
-    grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
   }
 }
 
